Add Cloudinary upload for user profile, and squads entry-point
